# Epico

./: .gitignore  Cargo.toml  README.md  setup.sh
bench/: README.md  ab_bench.sh  analyze_ab.py  analyze_decomp.py  bench_codec.sh  native_decomp.sh  parse_summary.py  plot_scaling.py  tp_bench_2stage.sh
bench/results/20260608_165909/: ab_tidy.csv
bench/results/20260608_165909/latency/dispatcher/rate120000/rep1/: meta.json
bench/results/20260608_165909/latency/dispatcher/rate120000/rep2/: meta.json
bench/results/20260608_165909/latency/dispatcher/rate120000/rep3/: meta.json
bench/results/20260608_165909/latency/dispatcher/rate20000/rep1/: meta.json
bench/results/20260608_165909/latency/dispatcher/rate20000/rep2/: meta.json
bench/results/20260608_165909/latency/dispatcher/rate20000/rep3/: meta.json
bench/results/20260608_165909/latency/dispatcher/rate60000/rep1/: meta.json
bench/results/20260608_165909/latency/dispatcher/rate60000/rep2/: meta.json
bench/results/20260608_165909/latency/dispatcher/rate60000/rep3/: meta.json
bench/results/20260608_165909/latency/edge/rate120000/rep1/: meta.json
bench/results/20260608_165909/latency/edge/rate120000/rep2/: meta.json
bench/results/20260608_165909/latency/edge/rate120000/rep3/: meta.json
bench/results/20260608_165909/latency/edge/rate20000/rep1/: meta.json
bench/results/20260608_165909/latency/edge/rate20000/rep2/: meta.json
bench/results/20260608_165909/latency/edge/rate20000/rep3/: meta.json
bench/results/20260608_165909/latency/edge/rate60000/rep1/: meta.json
bench/results/20260608_165909/latency/edge/rate60000/rep2/: meta.json
bench/results/20260608_165909/latency/edge/rate60000/rep3/: meta.json
bench/results/20260608_165909/throughput/dispatcher/cw16/rep1/: meta.json
bench/results/20260608_165909/throughput/dispatcher/cw16/rep2/: meta.json
bench/results/20260608_165909/throughput/dispatcher/cw16/rep3/: meta.json
bench/results/20260608_165909/throughput/edge/cap256/rep1/: meta.json
bench/results/20260608_165909/throughput/edge/cap256/rep2/: meta.json
bench/results/20260608_165909/throughput/edge/cap256/rep3/: meta.json
bench/results/20260609_085600/: ab_tidy.csv
bench/results/20260609_085600/latency/dispatcher/rate10000/run1/: meta.json
bench/results/20260609_085600/latency/dispatcher/rate10000/run2/: meta.json
bench/results/20260609_085600/latency/dispatcher/rate10000/run3/: meta.json
bench/results/20260609_085600/latency/dispatcher/rate20000/run1/: meta.json
bench/results/20260609_085600/latency/dispatcher/rate20000/run2/: meta.json
bench/results/20260609_085600/latency/dispatcher/rate20000/run3/: meta.json
bench/results/20260609_085600/latency/dispatcher/rate30000/run1/: meta.json
bench/results/20260609_085600/latency/dispatcher/rate30000/run2/: meta.json
bench/results/20260609_085600/latency/dispatcher/rate30000/run3/: meta.json
bench/results/20260609_085600/latency/dispatcher/rate35000/run1/: meta.json
bench/results/20260609_085600/latency/dispatcher/rate35000/run2/: meta.json
bench/results/20260609_085600/latency/dispatcher/rate35000/run3/: meta.json
bench/results/20260609_085600/latency/edge/rate10000/run1/: meta.json
bench/results/20260609_085600/latency/edge/rate10000/run2/: meta.json
bench/results/20260609_085600/latency/edge/rate10000/run3/: meta.json
bench/results/20260609_085600/latency/edge/rate20000/run1/: meta.json
bench/results/20260609_085600/latency/edge/rate20000/run2/: meta.json
bench/results/20260609_085600/latency/edge/rate20000/run3/: meta.json
bench/results/20260609_085600/latency/edge/rate30000/run1/: meta.json
bench/results/20260609_085600/latency/edge/rate30000/run2/: meta.json
bench/results/20260609_085600/latency/edge/rate30000/run3/: meta.json
epico-cli/: Cargo.toml
epico-cli/src/: build.rs  codegen.rs  config.rs  main.rs
epico-core/dispatcher/: Cargo.toml  credit-flow-control.md
epico-core/dispatcher/src/: dispatcher.rs
epico-core/logger/: Cargo.toml
epico-core/logger/src/: lib.rs
epico-core/master/: Cargo.toml  build.rs
epico-core/master/src/: autoscaler.rs  config.rs  conversion.rs  envelope.rs  host.rs  inproc.rs  main.rs  master.rs  pipeline_validator.rs  resources.rs  spsc.rs  supervisor.rs  typed.rs  worker.rs
epico-loadgen/: Cargo.toml
epico-loadgen/src/: main.rs
epico-sdk/: Cargo.toml
epico-sdk/src/: lib.rs
epico-sdk/wit/: epico.wit
epico-wire/: Cargo.toml
epico-wire/src/: lib.rs
examples/three-stage-test/: .bench_pipeline.yaml  pipeline.yaml
examples/three-stage-test/stages/: detect.rs  finalize.rs  normalize.rs  sink.rs  source.rs  warmup.rs
examples/two-stage-min/: .bench_pipeline.yaml  .wave_autoscale.yaml  pipeline.yaml
examples/two-stage-min/stages/: forward.rs  relay.rs
vhpc_plots/: plot_forse_finali.py  plot_scaling.py
(+21 files in other folders)
