[package]
name = "master"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "master"
path = "src/master.rs"

[features]
cold-start-opt = []
profile = ["dep:pprof"]

[dependencies]
# Async Runtime & Networking
tokio = { version = "1.35", features = ["full", "sync"] }
zmq = "0.10"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"

# Profiling
pprof = { version = "0.13", features = ["flamegraph"], optional = true }

# Serialization and Parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rand = "0.8"

# Embedded WebAssembly Engine — Component Model (Wasmtime 26)
# Dynamic dispatch via Val — no bindgen! needed.
wasmtime = { version = "26", features = ["component-model"] }
wasmtime-wasi = "26"
wasmtime-wasi-http = "26"

# Component-type introspection for load-time pipeline validation.
wasmparser = "0.218"
anyhow = "1"
epico-logger = { path = "../logger" }

# Process CPU + RSS sampling for the run summary. Cross-platform
# (Linux/macOS/Windows); refresh cost is negligible at 1 Hz.
sysinfo = "0.30"